--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
-theme: jekyll-theme-tactile
-title: SG's page
-description: Hello world!
+name: Sam's Personal Site
+permalink: /:title
+
+markdown: kramdown
+kramdown:
+  input: GFM
+  auto_ids: true
+
+defaults:
+  -
+    scope:
+      path: "wiki/" # an empty string here means all files in the project
+    values:
+      importance: 5
