--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,5 @@ defaults:
       path: "wiki/" # an empty string here means all files in the project
     values:
       importance: 5
+
+theme: modernist
