--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,6 @@ defaults:
     values:
       importance: 5
 
-theme: modernist
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+- jekyll-remote-theme
